@startuml ER-debtPosition
left to right direction

title ER - Debt Position


entity payment_position {
  * id <<generated by sequence>>
  --
  * IUPD
  * organization_fiscal_code
  --
  <<debtor attributes>>
  * type
  * fiscal_code
  * full_name
  street_name
  civic_number
  postal_code
  city
  province
  region
  country
  email
  phone
  
  <<payment position attributes>>
  * company_name
  * office_name
  * inserted_date 
    publish_date ( ACTION publish )
    validity_date ( cron job )
    payment_date
  * min_due_date (min due_date value of the n payment_option children) 
  * max_due_date (max due_date value of the n payment_option children) 
  * status 
  * last_updated_date ( = inserted_date al primo inserimento)
  * switch_to_expired (default = false)
  * version (default = 0 alla creazione)
}


entity payment_option {
  * id <<generated by sequence>>
  --
  * IUV(creditorReferenceId)(notification_code)
  * organization_fiscal_code
  --
  * amount
  * is_partial_payment
  * due_date
    retention_date
    payment_date
    reporting_date
  * inserted_date
    payment_method
  * fee
    psp_company
    receipt_id
    flow_reporting_id
    description
  * status
  * last_updated_date ( = inserted_date al primo inserimento)
}


entity transfer {
  * id <<generated by sequence>>
  --
  * organization_fiscal_code
  * transfer_id (allowed values 1,2,3,4,5)
  * IUV
  --
  * amount
  * remittance_information
  * category (= taxonomy)
  * iban
    postal_iban
  * inserted_date
  * status
  * last_updated_date ( = inserted_date al primo inserimento) 
}

payment_position ||..|{ payment_option
payment_option ||..|{ transfer
@enduml